// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Tooltip Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 200,
        }
      }
    >
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example"
        onClick={[Function]}
      >
        Tooltip
      </button>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Tooltip Posizioni 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 100,
        }
      }
    >
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example1"
        onClick={[Function]}
      >
        Tooltip in alto
      </button>
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example2"
        onClick={[Function]}
      >
        Tooltip a destra
      </button>
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example3"
        onClick={[Function]}
      >
        Tooltip in basso
      </button>
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example4"
        onClick={[Function]}
      >
        Tooltip a sinistra
      </button>
      <button
        aria-label={null}
        className="m-3 btn btn-secondary"
        id="example5"
        onClick={[Function]}
      >
        Tooltip con HTML
      </button>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
